--- a/pouring-tips/index.html
+++ b/pouring-tips/index.html
@@ -131,12 +131,12 @@
 </ul>
 <h2 id="chu-hui">初回</h2>
 <p><a href="https://mame.coffee/collections/coffee/products/zelelu-filter">Ethiopia Zelelu Ararso / MAME</a> のレシピに従って淹れてみた。</p>
-<pre><code>粉: 15g
-お湯: 225g
-抽出時間: 2分20秒
-湯温: 90度
-挽き目: WilfaでFilterから右に３目盛り
-</code></pre>
+<pre style="background-color:#2b303b;color:#6c7079;"><code><span style="color:#abb2bf;">粉: 15g
+</span><span style="color:#abb2bf;">お湯: 225g
+</span><span style="color:#abb2bf;">抽出時間: 2分20秒
+</span><span style="color:#abb2bf;">湯温: 90度
+</span><span style="color:#abb2bf;">挽き目: WilfaでFilterから右に３目盛り
+</span></code></pre>
 <p>結果、あまり好みではない味になってしまった。</p>
 <ul>
 <li>エグみが強く出ている</li>
@@ -184,12 +184,12 @@
 <p>前回買ってあまりにも美味しすぎた Raspberry Candy は当然リピートするとして、さすがに Zelelu Ararso をもう１度買ってリベンジするか迷っていたら、同じ淹れ方の豆が他に２つあるということで、練習も兼ねてそっちを買っていくのはどうだろう？という提案をしてもらった。それで買ってみたのが <a href="https://coffeecollective.dk/shop/enciso/">Colombia Edith Enciso and Wilson Rodriguez / The Coffee Collective</a>。</p>
 <h2 id="ribenzi-sositeyou-sheng">リベンジ、そして優勝</h2>
 <p>Enciso の淹れ方は Zelelu Ararso と同じ。レシピには粉 16g も書いてあるが、それは完全に好みでもう少しボディが欲しいと思ったら試してみて、とのことだった。まずは 15g で淹れてみる。</p>
-<pre><code>粉: 15g
-お湯: 225g
-抽出時間: 2分20秒
-湯温: 90度
-挽き目: WilfaでFilterから右に２目盛り
-</code></pre>
+<pre style="background-color:#2b303b;color:#6c7079;"><code><span style="color:#abb2bf;">粉: 15g
+</span><span style="color:#abb2bf;">お湯: 225g
+</span><span style="color:#abb2bf;">抽出時間: 2分20秒
+</span><span style="color:#abb2bf;">湯温: 90度
+</span><span style="color:#abb2bf;">挽き目: WilfaでFilterから右に２目盛り
+</span></code></pre>
 <p>前回のドリップ方法から変えた点は以下。</p>
 <ul>
 <li>投入２回目まで撹拌、３回目以降はお湯で撹拌しない</li>
